change the name of title

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -34,7 +34,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
-    <title>Krozo - React Documentation</title>
+    <title>Ruan's Personal Home Page</title>
   </head>
 
   <body
